--- a/11 - Serie Storiche/weather_prediction.ipynb
+++ b/11 - Serie Storiche/weather_prediction.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled76.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPf+pOzuMJrEFh0SDNaJurE",
+      "authorship_tag": "ABX9TyOMQlPhKT/Gn/bAAc3HgXsM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,19 +29,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gmbGBSZl5DgL",
-        "colab_type": "text"
+        "id": "gmbGBSZl5DgL"
       },
       "source": [
-        "# Predizione del Meteo\n",
+        "# Previsione del Meteo\n",
         "In questo video vedremo come utilizzare Tensorflow e le Reti Neurali Ricorrenti per eseguire forecasting di serie storiche. Una serie storica è un'insieme di dati in sequenza temporale e il forecasting è il processo di predizione di dati futuri, cioè di come la sequenza potrebbe continuare. Per il nostro esempio proveremo a cercare di predire la temperatura futura a Jena, una paese della Germania."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_nO3p1WM5HXG",
-        "colab_type": "text"
+        "id": "_nO3p1WM5HXG"
       },
       "source": [
         "## Importiamo i moduli"
@@ -50,9 +48,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0va6Drw1QKAC",
-        "colab_type": "code",
-        "colab": {}
+        "id": "0va6Drw1QKAC"
       },
       "source": [
         "import numpy as np\n",
@@ -62,14 +58,13 @@
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Dense, Flatten, Dropout, LSTM, Bidirectional, GlobalMaxPooling1D"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ce78nzDg5LZX",
-        "colab_type": "text"
+        "id": "ce78nzDg5LZX"
       },
       "source": [
         "## Scarichiamo i dati"
@@ -79,7 +74,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "dKuYKK9gPq4A",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 254
@@ -90,7 +84,7 @@
         "!wget https://storage.googleapis.com/tensorflow/tf-keras-datasets/jena_climate_2009_2016.csv.zip\n",
         "!unzip jena_climate_2009_2016.csv.zip"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,8 +110,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9crKb2SUFWOF",
-        "colab_type": "text"
+        "id": "9crKb2SUFWOF"
       },
       "source": [
         "## Definiamo le Costanti"
@@ -126,21 +119,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LQ-KwUaFFVZq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "LQ-KwUaFFVZq"
       },
       "source": [
         "WINDOW_SIZE = 20"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DvN2vUIs5NRV",
-        "colab_type": "text"
+        "id": "DvN2vUIs5NRV"
       },
       "source": [
         "## Prepariamo i Dati\n",
@@ -151,7 +141,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q0hYyMT1QLSo",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 198
@@ -162,7 +151,7 @@
         "df = pd.read_csv(\"jena_climate_2009_2016.csv\")\n",
         "df.head()"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,8 +308,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6JG4YfOhZFlR",
-        "colab_type": "text"
+        "id": "6JG4YfOhZFlR"
       },
       "source": [
         "LA colonna con la temperatura in gradi centigradi campionata ogni 10 minuti è *T (degC)*, estraiamone i valori in un'array numpy."
@@ -329,21 +317,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SRybbKFVQTQn",
-        "colab_type": "code",
-        "colab": {}
+        "id": "SRybbKFVQTQn"
       },
       "source": [
         "temp_data = df[\"T (degC)\"].values"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rku6Wua6ZS4w",
-        "colab_type": "text"
+        "id": "rku6Wua6ZS4w"
       },
       "source": [
         "Il metodo che viene solitamente utilizzato per addestrare modelli sulle serie storiche è quello di utilizzare un determinato intervallo temporale come feature e il valore immediatamente successivo all'intervallo come target. Ad esempio, se la nostra serie è composta da questa sequenza di numeri: *1, 2, 3, 4, 5, 6* e come intervallo temporale scegliamo 3, allora il nostro datset sarà così composto:\n",
@@ -361,7 +346,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "03FXx7dmRyYD",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -385,7 +369,7 @@
         "print(X.shape)\n",
         "print(y.shape)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,8 +384,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "orFq7WTfdyet",
-        "colab_type": "text"
+        "id": "orFq7WTfdyet"
       },
       "source": [
         "Tramite il parametro *traget_future* possiamo controllare la distanza dalle features del target, nel caso volessimo addestrare un modello in grado di eseguire predizioni più distanti nel futuro, ad esempio, se la nostra sequenza è questa: 1, 2, 3, 4, 5, 6 ,7 ,8 ,9 ,10, utilizziamo un'intervallo temporale di 4 e un target future di 3, allora il dataset sarà così composto:\n",
@@ -417,8 +400,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iA2Zwj2vawLT",
-        "colab_type": "text"
+        "id": "iA2Zwj2vawLT"
       },
       "source": [
         "A differenza di altri tipi di dati, quando lavoriamo con le serie storiche dobbiamo dividere il dataset in train set e test set senza mescolarlo, definiamo una funzione per farlo."
@@ -428,7 +410,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "IDwn5_GeS1A5",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -454,7 +435,7 @@
         "print(X_train.shape)\n",
         "print(X_test.shape)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,8 +450,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "39BxnH2rbLB1",
-        "colab_type": "text"
+        "id": "39BxnH2rbLB1"
       },
       "source": [
         "Ora eseguiamo la standardizzazione, ricordiamoci che media e deviazione standard qui calcolati ci serviranno anche per standardizzare nuovi dati che vorremo passare alla rete addestrata."
@@ -479,9 +459,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VVOpvgdgU4ea",
-        "colab_type": "code",
-        "colab": {}
+        "id": "VVOpvgdgU4ea"
       },
       "source": [
         "mean_value = X_train.mean()\n",
@@ -490,40 +468,36 @@
         "X_train = (X_train-mean_value)/std_value\n",
         "X_test = (X_test-mean_value)/std_value"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mZwi0i-p5Tds",
-        "colab_type": "text"
+        "id": "mZwi0i-p5Tds"
       },
       "source": [
-        "## Predirre il Meteo 10 minuti nel futuro\n",
+        "## Predire il Meteo 10 minuti nel futuro\n",
         "Creiamo una prima Rete LSTM per predire il meteo un minuto nel futuro, in questo caso si tratta di un problema di regressione, dato che il target è una variabile continua, quindi possiamo non specificare una funzione di attivazione per lo strato di output."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ObM0W1HdXYsp",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ObM0W1HdXYsp"
       },
       "source": [
         "model = Sequential()\n",
         "model.add(LSTM(8, input_shape=[WINDOW_SIZE,1]))\n",
         "model.add(Dense(1))"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZXiKvs-YcNqn",
-        "colab_type": "text"
+        "id": "ZXiKvs-YcNqn"
       },
       "source": [
         "Addestriamo il modello per 5 epoche, utilizzando *Mean Absolute Error* come funzione di costo."
@@ -533,7 +507,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "1OeLDk5-Xn6y",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
@@ -544,7 +517,7 @@
         "model.compile(optimizer='adam', loss='mae')\n",
         "model.fit(X_train, y_train, epochs=5)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,8 +552,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tMy1p_A4cTrE",
-        "colab_type": "text"
+        "id": "tMy1p_A4cTrE"
       },
       "source": [
         "Il risultato sul train set e molto buono, vediamo sul test set."
@@ -590,7 +562,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "vOJyPVhdb7tI",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -600,7 +571,7 @@
       "source": [
         "model.evaluate(X_test, y_test)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,8 +597,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MszQLOaCcW6a",
-        "colab_type": "text"
+        "id": "MszQLOaCcW6a"
       },
       "source": [
         "Anche qui il risultato è buono, definiamo una funzione per stampare su di un unico grafico sia la serie reale che quella predetta dal modello."
@@ -637,7 +607,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "gOIqVy5ZX-MA",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 592
@@ -655,7 +624,7 @@
         "y_pred = model.predict(X_test)\n",
         "plot_series_prediction(y_test[:500], y_pred[:500])"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -675,8 +644,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Woe9b4OuchrU",
-        "colab_type": "text"
+        "id": "Woe9b4OuchrU"
       },
       "source": [
         "Le predizioni del modello sono molto buone, ma al momento sta predicendo la temperatura nei 10 minuti successivi, proviamo a spingerci oltre."
@@ -685,8 +653,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "19WeZs7B5obK",
-        "colab_type": "text"
+        "id": "19WeZs7B5obK"
       },
       "source": [
         "## Predirre il Meteo 1 Ora nel Futuro"
@@ -695,8 +662,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5Wa-hZdEcvdy",
-        "colab_type": "text"
+        "id": "5Wa-hZdEcvdy"
       },
       "source": [
         "Proviamo ad addestrare una Rete LSTM questa volta per predire la temperatura nell'ora successiva, creiamo il dataset utilizzando la stessa funzione che abbiamo definito prima, ma questa volta impostiamo *target_future* a 6."
@@ -705,22 +671,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "02FsQrG9EoqU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "02FsQrG9EoqU"
       },
       "source": [
         "X, y = make_sequence_data(temp_data, 20, target_future=6)\n",
         "X_train, X_test, y_train, y_test = train_test_split_series(X, y)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "e6LoeOsFdDuD",
-        "colab_type": "text"
+        "id": "e6LoeOsFdDuD"
       },
       "source": [
         "Definiamo il modello ed eseguiamo l'addestramento"
@@ -730,7 +693,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "Em3JUozn6aep",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 763
@@ -750,7 +712,7 @@
         "model.compile(optimizer='adam', loss='mae')\n",
         "model.fit(X_train, y_train, epochs=20)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -816,7 +778,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "qPPswwe56nbF",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -826,7 +787,7 @@
       "source": [
         "model.evaluate(X_test, y_test)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -853,7 +814,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "Kqvy3N5Z68AG",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 592
@@ -884,8 +844,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GxrRA5BJddYr",
-        "colab_type": "text"
+        "id": "GxrRA5BJddYr"
       },
       "source": [
         "Ovviamente più andiamo nel futuro con le predizioni, più bassa sarà l'accuratezza del nostro modello."
@@ -894,8 +853,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iBYCJmYmEa2C",
-        "colab_type": "text"
+        "id": "iBYCJmYmEa2C"
       },
       "source": [
         "## Forecasting\n",
@@ -906,7 +864,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "_AUA3mb26IJq",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 431
@@ -932,7 +889,7 @@
         "\n",
         "model.evaluate(X_test, y_test)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -967,8 +924,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dF8kU9SEfF9f",
-        "colab_type": "text"
+        "id": "dF8kU9SEfF9f"
       },
       "source": [
         "Ora definiamo una funzione per eseguire il forecasting, la quale funzionerà così:\n",
@@ -984,9 +940,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W7X22zEmLNWo",
-        "colab_type": "code",
-        "colab": {}
+        "id": "W7X22zEmLNWo"
       },
       "source": [
         "def forecasting(model, x_start, times):\n",
@@ -1006,14 +960,13 @@
         "\n",
         "forecast = forecasting(model, X_test[-1,:,:], 30)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JBtkSYd5f3bz",
-        "colab_type": "text"
+        "id": "JBtkSYd5f3bz"
       },
       "source": [
         "Definiamo ora una funzione per stampare il grafico di come la serie potrebbe continuare nel futuro."
@@ -1023,7 +976,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "Sw0q4XlzUI9b",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 592
@@ -1046,7 +998,7 @@
         "\n",
         "plot_forecast(y_test[-50:], forecast)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
